# pyepubcheck

./: .codecrate.toml  .gitignore  .planledger.toml  .pre-commit-config.yaml  .ruff.toml  .taskledger.toml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  specmason.toml
docs/: api.md  changelog.md  cli.md  conf.py  development.md  index.md  inspection.md  installation.md  quickstart.md  release.md  reports.md  requirements.txt  specmason.md  validation-scope.md
pyepubcheck/: __init__.py  __main__.py  api.py  cli.py  config.py  errors.py  gherkin_mapper.py  i18n.py  messages.py  models.py  opf_parser.py  profiles.py  registry.py  result.py  severity.py  xhtml_validator.py  xml_parser.py
pyepubcheck/checks/: __init__.py  css.py  epub2.py  layout.py  media_overlays.py  navigation.py  ocf.py  package.py  reporting_usage.py  resources.py  svg.py  xhtml.py
pyepubcheck/checks/profiles/: __init__.py  accessibility.py  dictionaries.py  distributable_objects.py  edupub.py  indexes.py  previews.py  scriptable_components.py
pyepubcheck/inspect/: __init__.py  api.py  images.py  metadata.py  models.py  navigation.py  package.py  source.py  text_stats.py
pyepubcheck/io/: __init__.py  archive.py  expanded.py  paths.py  urls.py
pyepubcheck/reports/: console.py  inspection_console.py  inspection_csv.py  inspection_json.py  inspection_markdown.py  json_report.py  xml_report.py  xmp_report.py
requirements/: manifest.json
specs/behavior/: manifest.json
tests/: conftest.py  support.py
tests/acceptance/: test_cli.py  test_cli_bootstrap.py  test_cli_inspection.py  test_cli_reporting.py  test_content_documents.py  test_epub2.py  test_epub_profiles.py  test_harness.py  test_localization.py  test_multiple_renditions.py  test_navigation_layout_profiles.py  test_ocf_minimal.py  test_package_resources.py  test_region_nav.py  test_smoke.py
tests/unit/: test_bootstrap_models.py  test_css_checks.py  test_epub2_checks.py  test_gherkin_mapper.py  test_image_probe.py  test_inspection_metadata.py  test_inspection_navigation.py  test_inspection_source.py  test_inspection_stats.py  test_ocf_checks.py  test_opf_parser.py  test_package_checks.py  test_resource_checks.py  test_support_harness.py  test_svg_checks.py  test_vocabulary_checks.py  test_xhtml_validator.py  test_xml_parser.py
(+540 files in other folders)
