[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyepubcheck"
version = "0.1.0"
description = "Clean-room Python EPUB conformance checker driven by EPUBCheck behavior specs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["epub", "epubcheck", "validation", "publishing"]
dependencies = [
  "click>=8.1",
  "defusedxml>=0.7",
  "jsonpath-ng>=1.6",
  "lxml>=5",
  "tinycss2>=1.3",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-xdist>=3",
  "ruff>=0.5",
  "specmason",
]

[project.scripts]
pyepubcheck = "pyepubcheck.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyepubcheck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"
